sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value n
      if (getValeur(j)<n){
                       ^AlgSelectionSort:7: error: not found: value n
        n=j
        ^AlgSelectionSort:10: error: not found: value n
    echange(i,n)
              ^