sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for(i<- 0 to getNombreValeurs()-1){
    var v=getValeur(i)
    for(j<- i to getNombreValeurs()-1){
      if (getValeur(j)<n){
        n=j
      }
    }
    echange(i,n)
  }
}